--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
@@ -31,11 +32,11 @@
 
                    <nav>
                     <ul>
-                        <li><a href="#">Music</a></li>
-                        <li><a href="#">Bio</a></li>
-                        <li><a href="#">Shows</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">Contact</a></li>
+                       <li><a href="music.html">Music</a></li>
+                        <li><a href="bio.html">Bio</a></li>
+                        <li><a href="shows.html">Shows</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
 
