--- a/music.html
+++ b/music.html
@@ -22,7 +22,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">Enderby's Room</h1>
+                <h1 class="title"><a href="index.html">Enderby's Room</a></h1>
             </header>
         </div>
 
@@ -40,7 +40,7 @@
 
                 <article>
                     <section>
-                        <h2>article section h2</h2>
+                        <h2>Music</h2>
                         <p>We're planning to release our first single in spring 2015 - in the meantime, you can hear our live sound here:</p>
 <p><iframe src="//player.vimeo.com/video/77474960?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="800" height="450" frameborder="0"></iframe></p>
 <p><iframe src="//player.vimeo.com/video/76657175?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="800" height="450" frameborder="0"></iframe></p>
