--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -24,19 +25,20 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">Enderby's Room</h1>
+                <h1 class="title"><a href="index.html">Enderby's Room</a></h1>
             </header>
         </div>
 
         <div class="main-container">
             <div class="main wrapper clearfix">
 
-                   <nav>
+                <nav>
                     <ul>
-                       <li><a href="music.html">Music</a></li>
+                        <li><a href="music.html">Music</a></li>
                         <li><a href="bio.html">Bio</a></li>
                         <li><a href="shows.html">Shows</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li class="social"><a href="https://www.facebook.com/EnderbysRoom"><i class="fa fa-facebook-square" title="facebook"></i></a> <a href="http://www.twitter.com/Enderbys_Room"><i class="fa fa-twitter-square" title="twitter"></i></a></li>
                     </ul>
                 </nav>
 
