--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,9 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+
+        <link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png">
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
     </head>
     <body>
         <!--[if lt IE 7]>
