--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+
+        <link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png">
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
     </head>
     <body>
         <!--[if lt IE 7]>
