--- a/media.html
+++ b/media.html
@@ -15,6 +15,9 @@
         <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 
+        <link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png">
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
