--- a/music.html
+++ b/music.html
@@ -47,7 +47,7 @@
                 <article>
                     <section>
                         <h2>Music</h2>
-                        <p>We're planning our first releases for spring 2015 - in the meantime, you can hear our live sound here:</p>
+                        <p>We're planning our first releases for later this year - in the meantime, you can hear our live sound here:</p>
 <p><iframe src="//player.vimeo.com/video/77474960?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="800" height="450" frameborder="0"></iframe></p>
 <p><iframe src="//player.vimeo.com/video/76657175?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="800" height="450" frameborder="0"></iframe></p>
                     </section>
