--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <!--[if lt IE 7]>
