--- a/music.html
+++ b/music.html
@@ -50,8 +50,7 @@
                         <p><a href="http://shop.fikarecordings.com/album/enderbys-room">Our first release is out on Fika Recordings now - click here to buy it on vinyl, CD or download.</a></p>
 
                         <p>Here's the music video for our first single, 'My Old Friend'.</p>
-                        <p><iframe width="800" height="450" src="https://www.youtube.com/watch?v=xENicOdI1aU" frameborder="0" allowfullscreen></iframe></p>
-
+                        <p><iframe width="800" height="450" src="https://www.youtube.com/embed/xENicOdI1aU" frameborder="0" allowfullscreen></iframe></p>
                         <p>You can hear our live sound here:</p>
                         <p><iframe width="800" height="450" src="https://www.youtube.com/embed/VPQ6BI3lG-Q" frameborder="0" allowfullscreen></iframe></p>
 <p><iframe src="//player.vimeo.com/video/77474960?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="800" height="450" frameborder="0"></iframe></p>
