--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </nav>
 
                 
-
+<h4 class="album">Click here to buy our debut album</h4>
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
