added link to front page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </nav>
 
                 
-<br/><h4 class="album">Click here to buy our debut album</h4>
+<br/><h4 class="album"><a href="http://shop.fikarecordings.com/album/enderbys-room">Click here to buy our debut album</a></h4>
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
